<resources>
    <string name="app_name">NotesApp</string>
    <string name="title">Title</string>
    <string name="no">no</string>
    <string name="notes">Notes</string>
    <string name="done">Done</string>
    <string name="today">Today</string>
    <string name="description">Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="choose">Choose</string>
    <string name="timeRemain">Time remain</string>
    <string name="noteTitle">Note Title</string>
    <string name="delete">Delete</string>
    <string name="calendar">Calendar</string>
    <string name="deletedNoteDialogTitle">This note will be deleted. This action cannot be undone.</string>
    <string name="deleteNote">Delete Note</string>
    <string name="timestamp">Timestamp</string>
    <string name="recentlyDeleted">Recently Deleted</string>
    <string name="setting">Setting</string>
    <string name="recover">Recover</string>
    <string name="yourName">Your name</string>
    <string name="sortByID">Sort by id</string>
    <string name="deleted">Deleted</string>
    <string name="sortByTitle">Sort by title</string>
    <string name="sortByTime">Sort by time remaining</string>
    <string name="save">Save</string>
    <string name="phoneNumber">Phone number</string>
    <string name="email">Email</string>
    <string name="editProfile">Edit profile</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="yourProfile">Your profile</string>
    <string name="recentlyDeletedNote">Recently Deleted Note</string>
    <string name="dialogMessage">Recently deleted notes can\'t be edited.\nTo edit this note, you\'ll need to recover it.</string>
</resources>