<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/toolBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/setting"
        android:textColor="@color/pink"
        android:textSize="40sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/toolBar"
        android:background="#ffc6c6c6" />

    <TextView
        android:id="@+id/yourProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBar"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/yourProfile"
        android:textColor="#8962F8"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/personIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourProfile"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/no"
        android:src="@drawable/ic_person" />

    <TextView
        android:id="@+id/yourNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourProfile"
        android:layout_marginStart="120dp"
        android:layout_marginTop="43dp"
        android:text="@string/yourName"
        android:textColor="#A990DD"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/callIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/personIV"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/no"
        android:src="@drawable/ic_call" />

    <TextView
        android:id="@+id/phoneNumberTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/personIV"
        android:layout_marginStart="120dp"
        android:layout_marginTop="23dp"
        android:text="@string/phoneNumber"
        android:textColor="#A990DD"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/mailIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/callIV"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_mail" />

    <TextView
        android:id="@+id/mailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/callIV"
        android:layout_marginStart="120dp"
        android:layout_marginTop="23dp"
        android:text="@string/email"
        android:textColor="#A990DD"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mailIV"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <Button
            android:id="@+id/editBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>