<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/deleteNoteDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_ios_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bold"
        android:gravity="center"
        android:text="@string/deleteNote"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/deletedNoteDialogTitle"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#ffc6c6c6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#FF037BFF"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#ffc6c6c6"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/deleteBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="#FF037BFF"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>