<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/toolBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/editProfile"
        android:textColor="@color/pink"
        android:textSize="36sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/toolBar"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="#ffc6c6c6" />

    <EditText
        android:id="@+id/yourNameEDT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolBar"
        android:layout_marginStart="80dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="40dp"
        android:background="@null"
        android:hint="@string/yourName"
        android:textColor="#8962F8"
        android:textColorHint="#A990DD"
        android:textSize="20sp"
        android:autofillHints=""
        android:inputType="none" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/yourNameEDT"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="#ffc6c6c6" />

    <EditText
        android:id="@+id/phoneNumberEDT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourNameEDT"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@null"
        android:hint="@string/phoneNumber"
        android:textColor="#8962F8"
        android:textColorHint="#A990DD"
        android:textSize="20sp"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/phoneNumberEDT"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="#ffc6c6c6" />

    <EditText
        android:id="@+id/mailEDT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNumberEDT"
        android:layout_marginStart="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:background="@null"
        android:hint="@string/email"
        android:textColor="#8962F8"
        android:textColorHint="#A990DD"
        android:textSize="20sp"
        android:autofillHints=""
        android:inputType="none" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/mailEDT"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="#ffc6c6c6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mailEDT"
        android:layout_marginTop="64dp"
        android:gravity="center">

        <Button
            android:id="@+id/saveBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>