<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rlEditToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/ivICBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back"
            app:tint="#312161"
            android:contentDescription="@string/no" />

        <TextView
            android:id="@+id/tvDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ivICBack"
            android:text="@string/notes"
            android:textColor="#312161"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/ivICCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/no"
            android:src="@drawable/ic_check_no_circle"
            app:tint="#312161" />
    </RelativeLayout>

    <EditText
        android:id="@+id/idEdtNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlEditToolBar"
        android:layout_marginStart="31dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/title"
        android:background="@null"
        android:textColor="#8962F8"
        android:textColorHint="#E7DFFF"
        android:textSize="48sp"
        android:importantForAutofill="no"
        android:inputType="none" />

    <EditText
        android:id="@+id/idEdtNoteDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idEdtNoteTitle"
        android:layout_marginStart="31dp"
        android:layout_marginTop="14dp"
        android:background="@null"
        android:layout_marginEnd="20dp"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textColor="#8962F8"
        android:textColorHint="#E7DFFF"
        android:textSize="24sp"
        android:importantForAutofill="no" />


</RelativeLayout>