<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/noteContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="15dp"
    app:cardElevation="4dp"
    card_view:cardBackgroundColor="@color/lightPink">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/clockIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tdTVNotes"
            android:layout_alignParentEnd="false"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/no"
            android:padding="4dp"
            android:src="@drawable/ic_clock"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tdTVNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/manrope_bold"
            android:padding="4dp"
            android:text="@string/noteTitle"
            android:textColor="#312161"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tdTVNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tdTVNoteTitle"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/manrope_regular"
            android:maxLines="5"
            android:padding="4dp"
            android:text="@string/notes"
            android:textColor="#312161"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tdTVTimeStamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tdTVNotes"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            android:layout_toStartOf="@+id/idIVDelete"
            android:layout_toEndOf="@+id/clockIV"
            android:padding="4dp"
            android:text="@string/timeRemain"
            android:textColor="#312161"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/idIVDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tdTVNotes"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:contentDescription="@string/no"
            android:padding="4dp"
            android:src="@drawable/ic_delete"
            app:tint="@color/black" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>